--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_signin">SignIn</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="fullname">Fullname</string>
 </resources>
