--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="fullname">Fullname</string>
     <string name="deskripsi_signup">Sign up to continue</string>
     <string name="name_signup">Enter your name</string>
+    <string-array name="ordertype">
+        <item>Buy</item>
+        <item>Sell</item>
+    </string-array>
 </resources>
