--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="fullname">Fullname</string>
     <string name="deskripsi_signup">Sign up to continue</string>
     <string name="name_signup">Enter your name</string>
+    <string name="title_activity_maps">Map</string>
     <string-array name="ordertype">
         <item>Buy</item>
         <item>Sell</item>
