--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name_upper">CRYPTX</string>
     <string name="action_signup">SignUp</string>
     <string name="action_signin">SignIn</string>
-    <string name="deskripsi">Sign in for cryptocurrency saving </string>
+    <string name="deskripsi">Sign In</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="fullname">Fullname</string>
