Penyesuaian tulisan Sigup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="fullname">Fullname</string>
-    <string name="deskripsi_signup">Sign up to continue</string>
+    <string name="deskripsi_signup">Sign up</string>
     <string name="name_signup">Enter your name</string>
     <string name="title_activity_maps">Map</string>
     <string-array name="ordertype">
